Added activity transition animations

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">@style/MyCustomActivityAnimation</item>
+    </style>
+    <style name="MyCustomActivityAnimation"
+        parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">
+            @anim/activity_slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">
+            @anim/activity_slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">
+            @anim/activity_slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">
+            @anim/activity_slide_out_right</item>
     </style>
 
 </resources>
