--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#808080</color>
     <color name="golden_rod">#DAA520</color>
     <color name="red">#FF0000</color>
+    <color name="colorGreen">#2E8B57</color>
 </resources>
