--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="golden_rod">#DAA520</color>
     <color name="red">#FF0000</color>
     <color name="colorGreen">#2E8B57</color>
+    <color name="black">#000000</color>
 </resources>
