--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.NewAccountActivity"
-    android:background="@color/colorGreen">
+    android:background="@color/colorGreen"
+    android:id="@+id/container">
     <TextView
         android:id="@+id/introText"
         android:layout_width="wrap_content"
@@ -45,7 +46,7 @@ android:id="@+id/primaryPhoneContainer">
 </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         app:layout_constraintTop_toBottomOf="@+id/primaryPhoneContainer"
-        app:layout_constraintBottom_toTopOf="@+id/idNoContainer"
+        app:layout_constraintBottom_toTopOf="@+id/emailContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
@@ -59,6 +60,20 @@ android:id="@+id/primaryPhoneContainer">
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         app:layout_constraintTop_toBottomOf="@+id/secondaryPhoneContainer"
+        app:layout_constraintBottom_toTopOf="@+id/idNoContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/emailContainer">
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email address" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
         app:layout_constraintBottom_toTopOf="@+id/businessTypeContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
