--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/container"
             android:orientation="horizontal"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:shrinkColumns="*">
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,6 +107,16 @@
                     android:layout_weight="0.25"
                     android:gravity="center"
                     android:text="@string/monthly_revenue"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:background="@drawable/table_title_border"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.25"
+                    android:gravity="center"
+                    android:text="@string/created"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold"
